Uploaded all files

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/gh/Library/Android/sdk
-flutter.sdk=/Users/gh/Documents/Derek/flutter
+sdk.dir=C:\\Users\\Prof. Benjamin Emikp\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\Prof. Benjamin Emikp\\A - Advance Coding - A\\Flutter
 flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
